# transformer

./: .gitignore  README.md  download_dataset.py  evaluate.py  pyproject.toml  train.py
data/: dataset.py
models/: attention.py  config.py  encoder.py  encoder_block.py  hparam_configs.py
