[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers==4.49.0",
    "aiohappyeyeballs==2.4.8",
    "aiohttp==3.11.13",
    "aiosignal==1.3.2",
    "attrs==25.1.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "datasets==3.3.2",
    "dill==0.3.8",
    "filelock==3.17.0",
    "fonttools==4.56.0",
    "frozenlist==1.5.0",
    "fsspec==2024.12.0",
    "huggingface-hub==0.29.1",
    "idna==3.10",
    "jinja2==3.1.5",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "multiprocess==0.70.16",
    "networkx==3.4.2",
    "numpy==2.2.3",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "propcache==0.3.0",
    "pyarrow==19.0.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "setuptools==75.8.2",
    "six==1.17.0",
    "sympy==1.13.1",
    "tokenizers==0.21.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "xxhash==3.5.0",
    "yarl==1.18.3",
]
